# typed-configs

./: LICENSE  README.md  pyproject.toml
tests/: test_typed_configs.py
typed_configs/: __init__.py
