[tool.poetry]
name = "typed-configs"
version = "0.1.0"
description = ""
authors = ["Oscar Key <oscar.t.key@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
isort = "^5.13.2"
pytest = "^7.4.4"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
